@@ -1,3 +1,12 @@
+TAG: egload-tr8543_2-4
+DATE: 07/02/2008
+STAFF: sc
+CHANGES:
+1) renamed creatSeqeunceAssociations to createAssociations because
+   it does homologene group ids too
+2) factored makeSeqAssociationToMarker out of createAssociations so
+   checking for problem clone associations is done in one place
+
 TAG: egload-tr8543_2-3
 DATE: 07/01/2008
 STAFF: sc
